--- a/index.html
+++ b/index.html
@@ -47,203 +47,255 @@
     <header class="navigation">
       <nav class="row">
         <ul class="main-nav">
-          <li><a href="index.html#last-minute-section">Oferty Last-minute</a></li>
-          <li><a href="index.html#places-section">Nasze ośrodki</a></li>
-          <li><a href="index.html#about-us">O nas</a></li>
-          <li><a href="index.html#contact">Kontakt</a></li>
+          <li><a href="#last-minute-section">Oferty Last-minute</a></li>
+          <li><a href="#places-section">Nasze ośrodki</a></li>
+          <li><a href="#about-us">O nas</a></li>
+          <li><a href="#contact">Kontakt</a></li>
           <li><a href="terms-and-conditions.html">Regulamin serwisu</a></li>
         </ul>
       </nav>
     </header>
     <!-- LAST MINUTE OFFERS SECTION-->
-    <section id="last-minute-section">
-      <div class="container">
-        <h2>Oferty Last-minute</h2>
-        <div class="row justify-content-center">
-          <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-              <img
-                src="https://i.content4travel.com/cms/img/u/desktop/seres/tcpweka_0.jpg"
-                class="card-img-top"
-                alt="Croatia last minute"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Egipt / Taba</h5>
-                <h6>1 799 PLN / os</h6>
-                <p class="card-text">
-                  Hotel El Wekala Aqua Park Resort
-                </p>
+    <div class="page-content">
+      <section id="last-minute-section">
+        <div class="container">
+          <h2>Oferty Last-minute</h2>
+          <div class="row justify-content-center">
+            <div class="col-sm">
+              <div class="card" style="width: 18rem;">
+                <img
+                  src="https://i.content4travel.com/cms/img/u/desktop/seres/tcpweka_0.jpg"
+                  class="card-img-top"
+                  alt="Croatia last minute"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Egipt / Taba</h5>
+                  <h6>1 799 PLN / os</h6>
+                  <p class="card-text">
+                    Hotel El Wekala Aqua Park Resort
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-              <img
-                src="https://i.content4travel.com/cms/img/u/desktop/seres/rmfonat_0.jpg"
-                class="card-img-top"
-                alt="Croatia last minute"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Egipt / Marsa Alam</h5>
-                <h6>1 959 PLN / os</h6>
-                <p class="card-text">
-                  Hotel Onatti Beach Resort
-                </p>
+            <div class="col-sm">
+              <div class="card" style="width: 18rem;">
+                <img
+                  src="https://i.content4travel.com/cms/img/u/desktop/seres/rmfonat_0.jpg"
+                  class="card-img-top"
+                  alt="Croatia last minute"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Egipt / Marsa Alam</h5>
+                  <h6>1 959 PLN / os</h6>
+                  <p class="card-text">
+                    Hotel Onatti Beach Resort
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-              <img
-                src="https://i.content4travel.com/cms/img/u/desktop/seres/fncdomg_0.jpg"
-                class="card-img-top"
-                alt="Croatia last minute"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Madera</h5>
-                <h6>1 999 PLN / os</h6>
-                <p class="card-text">
-                  Hotel Dom Pedro Garajau Apartment & Nature
-                </p>
+            <div class="col-sm">
+              <div class="card" style="width: 18rem;">
+                <img
+                  src="https://i.content4travel.com/cms/img/u/desktop/seres/fncdomg_0.jpg"
+                  class="card-img-top"
+                  alt="Croatia last minute"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Madera</h5>
+                  <h6>1 999 PLN / os</h6>
+                  <p class="card-text">
+                    Hotel Dom Pedro Garajau Apartment & Nature
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <!--
+      </section>
+      <!--
   OUR PLACES SECTION
 -->
-    <section id="places-section">
-      <div class="row justify-content-center">
-        <h2>Nasze ośrodki</h2>
-      </div>
-      <div class="row justify-content-center">
-        <p>
-          Obecnie firma oferuje wypoczynek w trzech miejscach: Egipcie, Grecji oraz Wyspach Madery.
-        </p>
-      </div>
-
-      <div class="places-carousel ">
-        <div
-          id="carouselExampleCaptions"
-          class="carousel slide"
-          data-ride="carousel"
-        >
-          <ol class="carousel-indicators">
-            <li
-              data-target="#carouselExampleCaptions"
-              data-slide-to="0"
-              class="active"
-            ></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="assets/img/egypt.jpg"
-                class="d-block w-100 carousel-item-image"
-                alt="Egipt"
-              />
-              <div class="carousel-caption d-none d-md-block carousel-caption-enhanced">
-                <h5>Egipt</h5>
-                <p>
-                  Państwo położone w północno-wschodniej Afryce z półwyspem Synaj w zachodniej Azji.
-                </p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img
-                src="assets/img/madeira.jpg"
-                class="d-block w-100 carousel-item-image"
-                alt="Madera"
-              />
-              <div class="carousel-caption d-none d-md-block carousel-caption-enhanced">
-                <h5>Madera</h5>
-                <p>Portugalski archipelag położony na Oceanie Atlantyckim</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img
-                src="assets/img/greece.jpg"
-                class="d-block w-100 carousel-item-image"
-                alt="Grecja"
-              />
-              <div class="carousel-caption d-none d-md-block carousel-caption-enhanced">
-                <h5>Grecja</h5>
-                <p>
-                  Kraj położony w południowo-wschodniej części Europy, na południowym krańcu Półwyspu Bałkańskiego.
-                </p>
-              </div>
-            </div>
-          </div>
-          <a
-            class="carousel-control-prev"
-            href="#carouselExampleCaptions"
-            role="button"
-            data-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a
-            class="carousel-control-next"
-            href="#carouselExampleCaptions"
-            role="button"
-            data-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+      <section id="places-section">
+        <div class="row justify-content-center">
+          <h2>Nasze ośrodki</h2>
         </div>
-      </div>
-    </section>
+        <div class="row justify-content-center">
+          <p>
+            Obecnie firma oferuje wypoczynek w trzech miejscach: Egipcie, Grecji
+            oraz Wyspach Madery.
+          </p>
+        </div>
 
-    <!-- SECTION "ABOUT US" -->
-    <section class="section-about-us" id="about-us">
-      <div class="row justify-content-center">
-        <h2>O NAS</h2>
-        <p>
-          Llamas in Pajamas powstała w 2018 roku i od dokładnie tego samego roku, zajmuje pozycję lidera branży turystycznej, zwłaszcza wśród studenów. Następujące sezony ugruntowały pozycję firmy na rynku, kiedy niskimi cenami i dobrym stosunkiem jakości do kosztu wycieczki zyskała uznanie środowisk uczelnianych. Konsekwentna praca młodego innowacyjnego zespołu doprowadziła do gwałtownego i nieprzemyślanego wzrostu firmy.
-          ITAKA powstała w 1989 r. i od 2009 r. zajmuje pozycję niekwestionowanego lidera branży turystycznej.
-        </p>
-        <p>
-          Innowacyjne technologie wykorzystywane na codzień w biurze Llamas in Pajamas doprowadziły do prowadzenia pionierskich działań w zakresie turystyki zagranicznej wyjazdowej, autorskie programy wycieczek objazdowych obejmujących owocowe wtorki na każdym zakątku świata oraz strefy wypoczynku dla najbardziej wymagających. Dla bardziej aktywnych osób została specjalnie naszykowana oferta benefitów w postaci kart sportowych umożliwiających dowolne korzystanie z obecnych w danym miejscu ośrodków aktywnej rekreacji.
-        </p>
-        <p>
-          Strategia rozwoju to dalsze zatrudnianie studentów, gdyż każdy wspaniale wie, że skończoną ich ilością można zastąpić każdego szanującego się pracownika. Dodatkowo, kto inny jak nie ta grupa społeczna wie, jak zapewnić wartościowe wspomnienia podczas spędzanego wypoczynku.
-        </p>
-        <p>
-          Sprawdź nas!
-        </p>
-      </div>
-    </section>
+        <div class="places-carousel ">
+          <div
+            id="carouselExampleCaptions"
+            class="carousel slide"
+            data-ride="carousel"
+          >
+            <ol class="carousel-indicators">
+              <li
+                data-target="#carouselExampleCaptions"
+                data-slide-to="0"
+                class="active"
+              ></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="assets/img/egypt.jpg"
+                  class="d-block w-100 carousel-item-image"
+                  alt="Egipt"
+                />
+                <div
+                  class="carousel-caption d-none d-md-block carousel-caption-enhanced"
+                >
+                  <h5>Egipt</h5>
+                  <p>
+                    Państwo położone w północno-wschodniej Afryce z półwyspem
+                    Synaj w zachodniej Azji.
+                  </p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/img/madeira.jpg"
+                  class="d-block w-100 carousel-item-image"
+                  alt="Madera"
+                />
+                <div
+                  class="carousel-caption d-none d-md-block carousel-caption-enhanced"
+                >
+                  <h5>Madera</h5>
+                  <p>Portugalski archipelag położony na Oceanie Atlantyckim</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/img/greece.jpg"
+                  class="d-block w-100 carousel-item-image"
+                  alt="Grecja"
+                />
+                <div
+                  class="carousel-caption d-none d-md-block carousel-caption-enhanced"
+                >
+                  <h5>Grecja</h5>
+                  <p>
+                    Kraj położony w południowo-wschodniej części Europy, na
+                    południowym krańcu Półwyspu Bałkańskiego.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <a
+              class="carousel-control-prev"
+              href="#carouselExampleCaptions"
+              role="button"
+              data-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#carouselExampleCaptions"
+              role="button"
+              data-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </section>
 
-    <!-- CONTACT -->
-    <section id="contact">
-      <div class="row justify-content-center">
-        <h2>Skontaktuj się z nami</h2>
-      </div>
-      <div class="row justify-content-center">
-        <form>
-          <div class="form-group">
-            <label for="email-address">Adres e-mail</label>
-            <input type="email" class="form-control" id="email-address" placeholder="jan.kowalski@przyklad.com">
-            <small class="form-text text-muted">Twój adres e-mail nie zostanie udostępniony osobom trzecim.</small>
-          </div>
-          <div class="form-group">
-            <label for="full-name">Imię i nazwisko</label>
-            <input type="email" class="form-control" id="full-name" placeholder="Jan Kowalski">
-          </div>
-          <div class="form-group">
-            <label for="email-body">Treść wiadomości</label>
-            <textarea class="form-control" id="email-body" rows="5"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary btn-block">Wyślij</button>
-        </form>
-      </div>
-    </section>
+      <!-- SECTION "ABOUT US" -->
+      <section class="section-about-us" id="about-us">
+        <div class="row justify-content-center">
+          <h2>O NAS</h2>
+          <p>
+            Llamas in Pajamas powstała w 2018 roku i od dokładnie tego samego
+            roku, zajmuje pozycję lidera branży turystycznej, zwłaszcza wśród
+            studenów. Następujące sezony ugruntowały pozycję firmy na rynku,
+            kiedy niskimi cenami i dobrym stosunkiem jakości do kosztu wycieczki
+            zyskała uznanie środowisk uczelnianych. Konsekwentna praca młodego
+            innowacyjnego zespołu doprowadziła do gwałtownego i nieprzemyślanego
+            wzrostu firmy.
+          </p>
+          <p>
+            Innowacyjne technologie wykorzystywane na codzień w biurze Llamas in
+            Pajamas doprowadziły do prowadzenia pionierskich działań w zakresie
+            turystyki zagranicznej wyjazdowej, autorskie programy wycieczek
+            objazdowych obejmujących owocowe wtorki na każdym zakątku świata
+            oraz strefy wypoczynku dla najbardziej wymagających. Dla bardziej
+            aktywnych osób została specjalnie naszykowana oferta benefitów w
+            postaci kart sportowych umożliwiających dowolne korzystanie z
+            obecnych w danym miejscu ośrodków aktywnej rekreacji.
+          </p>
+          <p>
+            Strategia rozwoju to dalsze zatrudnianie studentów, gdyż każdy
+            wspaniale wie, że skończoną ich ilością można zastąpić każdego
+            szanującego się pracownika. Dodatkowo, kto inny jak nie ta grupa
+            społeczna wie, jak zapewnić wartościowe wspomnienia podczas
+            spędzanego wypoczynku.
+          </p>
+          <p>
+            Sprawdź nas!
+          </p>
+        </div>
+      </section>
+
+      <!-- CONTACT -->
+      <section id="contact">
+        <div class="row justify-content-center">
+          <h2>Skontaktuj się z nami</h2>
+        </div>
+        <div class="row justify-content-center">
+          <form>
+            <div class="form-group">
+              <label for="email-address">Adres e-mail</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email-address"
+                placeholder="jan.kowalski@przyklad.com"
+              />
+              <small class="form-text text-muted"
+                >Twój adres e-mail nie zostanie udostępniony osobom
+                trzecim.</small
+              >
+            </div>
+            <div class="form-group">
+              <label for="full-name">Imię i nazwisko</label>
+              <input
+                type="email"
+                class="form-control"
+                id="full-name"
+                placeholder="Jan Kowalski"
+              />
+            </div>
+            <div class="form-group">
+              <label for="email-body">Treść wiadomości</label>
+              <textarea
+                class="form-control"
+                id="email-body"
+                rows="5"
+              ></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">
+              Wyślij
+            </button>
+          </form>
+        </div>
+      </section>
+    </div>
 
     <!-- FOOTER-->
     <footer class="footer">
@@ -253,15 +305,15 @@
           <section class="col-md-2">
             <h6>Firma</h6>
             <ul class="footer-company-info">
-              <li><a href="#">O nas</a></li>
-              <li><a href="#">Kontakt</a></li>
+              <li><a href="#about-us">O nas</a></li>
+              <li><a href="#contact">Kontakt</a></li>
             </ul>
           </section>
           <!-- TERMS & CONDITIONS-->
           <section class="col-md-2">
             <h6>Zasady</h6>
             <ul class="footer-terms-and-conditions">
-              <li><a href="#">Regulamin</a></li>
+              <li><a href="terms-and-conditions.html">Regulamin</a></li>
             </ul>
           </section>
           <!-- SOCIAL MEDIA -->
